fixed spacing

--- a/client/src/components/LoginPage/LogIn.module.css
+++ b/client/src/components/LoginPage/LogIn.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 20px;
+    margin: 5%;
   }
   
   .formWrapper {
